--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ body {
   display: flex;
   align-items: center;
   padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #f5f5f5;  
 }
 
 .form {
@@ -80,7 +79,26 @@ body {
   height:  120px;
 }
 
-.logo{
-  width: 125px;
-  height: 90px;
+.logo {
+  width: 91px;
+  height: 130px;
+}
+
+.button-black{
+  background-color: #2d3436;
+  border-color: #2d3436;
+}
+
+@media (max-width: 575.98px) {
+  .logo {
+    width: 60px;
+    height: 80px;
+  }
+  .title{
+    font-size: 20px;
+  }
+  .button-black{
+    font-size: 15px;
+    padding: 4px;
+  }
 }
