--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,7 @@ body {
   .title{
     font-size: 20px;
   }
-  .button-black{
-    font-size: 15px;
-    padding: 4px;
+  section{
+    margin-top: 70px;
   }
 }
